Added the icon for the assign student to class form and started on the create a quesiton form

--- a/AssignStudent.resx
+++ b/AssignStudent.resx
@@ -4425,4 +4425,26 @@
         T+Q6cbSis4LqNs//2Q==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAQAAAABAAoAQAAJgAAACAgEAAAAAQA6AIAAE4BAAAoAAAAEAAAACAAAAABAAQAAAAAAIAA
+        AAAAAAAAAAAAABAAAAAQAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAICAgADAwMAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAD/////////AP////////8A////AA///wD///8AD/
+        //AP///wAP//8A////AA///wD///8AD///AP///wAP//8A////AA///wD/D/8AD/8PAP8P/wAP/w8A/w
+        AAAAAADwD/D/////8PAP////////8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACgAAAAgAAAAQAAAAAEABAAAAAAAAAIAAAAA
+        AAAAAAAAEAAAABAAAAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAgICAAMDAwAAAAP8AAP8AAAD/
+        /wD/AAAA/wD/AP//AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP////////////////8AAAD/////////////////AAAA//////
+        ///////////wAAAP//////AAAA//////8AAAD///////AAD///////AAAA///////wAA///////wAAAP
+        //////8AAP//////8AAAD///////AAD///////AAAA///////wAA///////wAAAP//////8AAP//////
+        8AAAD///////AAD///////AAAA///////wAA///////wAAAP//////8AAP//////8AAAD///////AAD/
+        //////AAAA///////wAA///////wAAAP//////8AAP//////8AAAD///////AAD///////AAAA//////
+        /wAA///////wAAAP/w////8AAP////D/8AAAD/8AAAAAAAAAAAAA//AAAA//AAAAAAAAAAAAAP/wAAAP
+        /wAAAAAAAAAAAAD/8AAAD/8P///////////w//AAAA/////////////////wAAAP////////////////
+        8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
